[package]
name = "clipper"
version = "0.1.0"
authors = ["Sergey Mishin <sergei.a.mishin@gmail.com>"]

[dependencies]
libc = "0.2.43"
clap = "2.32.0"
tokio = "0.1.7"
tokio-io = "0.1"

futures = "0.1.23"
tokio-process = "0.2.2"

log = "0.4.3"
env_logger = "0.5.12"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

failure = "0.1.2"
